Converge OOXML v3 import and Excel column dimensions
